--- a/actividad_1_uf3/index.html
+++ b/actividad_1_uf3/index.html
@@ -11,12 +11,15 @@
 family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"/>
 </head>
 <body>
-<div class="drop-area" draggable="true">
-    <h2>Drag & Drop files</h2>
-    <button>Upload files</button>
-    <input type="file" name="inputFiles[]" id="input-file" hidden multiple/>
+<div>
+    <div class="drop-area" draggable="true">
+        <h2>Drag & Drop files</h2>
+        <button>Upload files</button>
+        <input type="file" name="inputFiles[]" id="input-file" hidden multiple/>
+    </div>
+    <div id="preview"></div>
+
 </div>
-<div id="preview"></div>
 
 <script src="script.js"></script>
 </body>
