carga de datos al select

--- a/actividad_3_uf3/index.html
+++ b/actividad_3_uf3/index.html
@@ -6,9 +6,19 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Actividad 3</title>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
+<form>
+    <select id="categoria">
+        <option disabled selected > Selecciona una categoria</option>
+    </select>
+    <select id="subcategoria">
+        <option disabled selected > Selecciona una subcategoria</option>
+    </select>
 
- <script src="scripts.js"></script>
+</form>
+
+<script src="scripts.js"></script>
 </body>
 </html>
