--- a/actividad_2_uf3/index.html
+++ b/actividad_2_uf3/index.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
 </head>
 <body>
 
@@ -29,7 +29,7 @@
 
     <br>
 
-    <input id="submit" type="submit" value="Submit">
+    <input id="formsubmit" type="submit" value="Submit">
 </form>
 
 
