--- a/actividad_4_uf3/index.html
+++ b/actividad_4_uf3/index.html
@@ -12,12 +12,12 @@
 jSs9hK8lscYUMOtVPk&callback=initMap" async defer></script>
 </head>
 <body>
-
 <div id="map"></div>
+<input type="text" name="adreca" value="" id="adreca"/>
 <button type="button" class="btn btn-secondary" id="findLoc">Buscar adreça</button>
-<input type="hidden" name="lat" value="" id="latitude"/>
-<input type="hidden" name="lng" value="" id="longitude"/>
-
+<br>
+<input type="text" name="lat" value="" id="latitude" placeholder="lat"/>
+<input type="text" name="lng" value="" id="longitude" placeholder="lng"/>
 
 <script type="module" src="index.js"></script>
 </body>
