--- a/actividad_4_uf3/index.html
+++ b/actividad_4_uf3/index.html
@@ -19,6 +19,7 @@ jSs9hK8lscYUMOtVPk&callback=initMap" async defer></script>
 <input type="text" name="lat" value="" id="latitude" placeholder="lat"/>
 <input type="text" name="lng" value="" id="longitude" placeholder="lng"/>
 
+<button type="button" class="btn btn-secondary" id="geo"> Geolocalización </button>
 <script type="module" src="index.js"></script>
 </body>
 </html>
